change button-container width to test heroku mobile spacing issue

--- a/app/styles/base/_helpers.scss
+++ b/app/styles/base/_helpers.scss
@@ -16,7 +16,7 @@
   background-color: #ebebeb;
   margin: 10px;
   .button-container{
-    width: 100%;
+    width: 350px;
     margin: 5px;
   }
 }
